Fx a z-index issue with postbox and tooltips

--- a/src/resources/postcss/tickets-tables.pcss
+++ b/src/resources/postcss/tickets-tables.pcss
@@ -3,6 +3,11 @@
 	--border-color: #ccc;
 }
 
+/* fix a z-index issue with postbox and tooltips */
+#tribetickets {
+	z-index: 1;
+}
+
 .tribe-tickets-editor-table {
 	border-radius: var(--border-radius);
 	border-spacing: 0;
